tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_27.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (+ (- ((2 * z) MOD (y - 1))));
  (* error *)  q := ((- ((r * 1) MOD (1223 * 0))) < (((- 0) DIV (1 MOD z)) MOD ((1223 + z) MOD (+ 2))));
               p := ((+ ((z - y) DIV (x DIV 0))) >= (((- 1223) * (0 + x)) DIV ((+ z) MOD (z DIV x))));
               p := ((((z - z) * (1 - y)) * ((- 0) - (1 - 1))) # ((- (+ z)) + (+ (200 MOD z))));
               z := ((+ ((x MOD y) + (200 * 1))) MOD (((z * 1223) DIV (1223 MOD 0)) - (- (y MOD 1))));
               q := ((+ (+ (2 MOD 1223))) >= ((+ (200 + y)) DIV ((200 + 200) - (200 * 0))));
               y := ((((200 + 2) DIV (+ y)) - ((1 + x) MOD (200 DIV 0))) + ((+ (+ 0)) * ((x MOD 0) - (1 DIV 1))));
               r := ((((- 0) + (y + x)) MOD (+ (1 DIV 0))) < (+ (- (x - 200))));
               y := (- (((z - y) + (0 MOD 1)) DIV ((0 DIV 200) MOD (1 - x))));
               q := ((~ ((1223 + 0) = (- y))) & (~ ((- 1223) >= (2 DIV 200))))
END Test12.